--- a/sobre mi.html
+++ b/sobre mi.html
@@ -149,7 +149,7 @@
         <h2 class="page-title">Sobre mí</h2>
         
         <div class="profile">
-            <img src="/api/placeholder/150/150" alt="Foto de perfil" class="profile-img">
+            <img src="imagenyo.jpg" alt="Foto de perfil" class="profile-img">
             <h3>Kidyba Lautaro</h3>
             <p>Estudiante de licenciatura en sistemas</p>
         </div>
