--- a/home1.html
+++ b/home1.html
@@ -147,7 +147,7 @@
     
     <nav>
         <ul>
-            <li><a href="home.html" class="active">Home</a></li>
+            <li><a href="home1.html" class="active">Home</a></li>
             <li><a href="pagina avisos.html">Avisos</a></li>
             <li><a href="sobre mi.html">Sobre mí</a></li>
             <li><a href="materias 2025.html">Materias 2025</a></li>
