--- a/sobre mi.html
+++ b/sobre mi.html
@@ -137,7 +137,7 @@
     
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="home1.html">Home</a></li>
             <li><a href="pagina avisos.html">Avisos</a></li>
             <li><a href="sobre mi.html" class="active">Sobre mí</a></li>
             <li><a href="materias 2025.html">Materias 2025</a></li>
